chore: cleaned code