@@ -6,7 +6,6 @@ import java.beans.IntrospectionException;
 import java.beans.Introspector;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -23,54 +22,55 @@ import org.junit.jupiter.api.parallel.ExecutionMode;
 import com.binance4j.core.Request;
 import com.binance4j.core.exception.ApiException;
 
-import lombok.Getter;
 import lombok.NonNull;
 
+/**
+ * 
+ */
 @Execution(ExecutionMode.CONCURRENT)
-public abstract class ConcurrentTest<T> {
-	@Getter
+public abstract class CustomTest<T> {
+	/** The API public key */
 	protected String key = System.getenv("BINANCE_API_KEY");
-	@Getter
+	/** The API secret */
 	protected String secret = System.getenv("BINANCE_API_SECRET");
-	@Getter
+	/** The testnet public key */
 	protected String testnetKey = System.getenv("BINANCE_TESTNET_API_KEY");
-	@Getter
+	/** The testnet secret */
 	protected String testnetSecret = System.getenv("BINANCE_TESTNET_API_SECRET");
-	@Getter
+	/** The symbol */
 	protected String symbol = "BNBBTC";
-	@Getter
+	/** The asset */
 	protected String asset = "BNB";
-	@Getter
+	/** The limit */
 	protected int limit = 25;
-	@Getter
-	protected List<String> assets = Arrays.asList(asset, "BUSD", "BTC");
-	@Getter
-	protected List<String> symbols = Arrays.asList(symbol, "BNBBUSD", "BTCBUSD");
-	@Getter
+	/** The assets */
+	protected List<String> assets = List.of(asset, "BUSD", "BTC");
+	/** The symbols */
+	protected List<String> symbols = List.of(symbol, "BNBBUSD", "BTCBUSD");
+	/** The client */
 	protected T client;
-	@Getter
+	/** The testnet client */
 	protected T testnetClient;
 
-	protected ConcurrentTest() {
+	/** Constructor */
+	protected CustomTest() {
 	}
 
-	protected ConcurrentTest(T client) {
+	/**
+	 * Constructor
+	 * 
+	 * @param client The API client
+	 */
+	protected CustomTest(T client) {
 		this.client = client;
 	}
 
-	protected ConcurrentTest(@NonNull Class<? extends T> client) {
+	/**
+	 * @param clientClass The client class
+	 */
+	protected CustomTest(@NonNull Class<? extends T> clientClass) {
 		try {
-			this.client = client.getDeclaredConstructor(String.class, String.class).newInstance(getKey(), getSecret());
-		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
-				| SecurityException e) {
-			e.printStackTrace();
-		}
-	}
-
-	protected ConcurrentTest(Class<? extends T> client, Class<? extends T> testnetClient) {
-		try {
-			this.client = client.getDeclaredConstructor(String.class, String.class).newInstance(getKey(), getSecret());
-			this.testnetClient = testnetClient.getDeclaredConstructor(String.class, String.class).newInstance(getTestnetKey(), getTestnetSecret());
+			this.client = clientClass.getDeclaredConstructor(String.class, String.class).newInstance(key, secret);
 		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
 				| SecurityException e) {
 			e.printStackTrace();
@@ -78,14 +78,27 @@ public abstract class ConcurrentTest<T> {
 	}
 
 	/**
-	 * Returns the properties of the given bean
-	 * 
+	 * @param clientClass        The client class
+	 * @param testnetClientClass The testnet client class
+	 */
+	protected CustomTest(Class<? extends T> clientClass, Class<? extends T> testnetClientClass) {
+		try {
+			this.client = clientClass.getDeclaredConstructor(String.class, String.class).newInstance(key, secret);
+			this.testnetClient = testnetClientClass.getDeclaredConstructor(String.class, String.class).newInstance(testnetKey, testnetSecret);
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+				| SecurityException e) {
+			e.printStackTrace();
+		}
+	}
+
+	/**
 	 * @param bean The bean we want the properties
+	 * @return the properties of the given bean
 	 */
 	protected Map<String, Object> getProperties(Object bean) {
 		Map<String, Object> map = new HashMap<>();
 		try {
-			Arrays.asList(Introspector.getBeanInfo(bean.getClass(), Object.class).getPropertyDescriptors()).stream().forEach(pd -> {
+			List.of(Introspector.getBeanInfo(bean.getClass(), Object.class).getPropertyDescriptors()).stream().forEach(pd -> {
 				try {
 					map.put(pd.getName(), pd.getReadMethod().invoke(bean));
 				} catch (Exception e) {
@@ -98,19 +111,17 @@ public abstract class ConcurrentTest<T> {
 	}
 
 	/**
-	 * Returns the bean properties with a null walue
-	 * 
 	 * @param bean The bean we want the properties
+	 * @return the bean properties with a null walue
 	 */
 	protected Set<String> getNullProperties(Object bean) {
 		return getNullProperties(bean, bean.getClass().getSimpleName());
 	}
 
 	/**
-	 * Returns the bean properties with a null walue
-	 * 
 	 * @param bean    The bean we want the properties
 	 * @param flatten Flatten the result to only show the properties names
+	 * @return the bean properties with a null walue
 	 */
 	protected Set<String> getNullProperties(Object bean, boolean flatten) {
 		Set<String> set = getNullProperties(bean, bean.getClass().getSimpleName());
@@ -122,10 +133,9 @@ public abstract class ConcurrentTest<T> {
 	}
 
 	/**
-	 * Returns the bean properties with a null walue
-	 * 
 	 * @param bean           The bean we want the properties
 	 * @param enclosingClass The enclosing class
+	 * @return the bean properties with a null walue
 	 */
 	protected Set<String> getNullProperties(Object bean, String enclosingClass) {
 		List<String> list = new ArrayList<>();
@@ -153,7 +163,7 @@ public abstract class ConcurrentTest<T> {
 				if (o.getValue() instanceof Collection || o.getValue() instanceof Map) {
 					return getNullProperties(o.getValue(), o.getKey());
 				} else if (o.getValue() == null) {
-					return new HashSet<>(Arrays.asList(Character.isUpperCase(enclosingClass.charAt(0)) ? o.getKey() : enclosingClass + "." + o.getKey()));
+					return new HashSet<>(List.of(Character.isUpperCase(enclosingClass.charAt(0)) ? o.getKey() : enclosingClass + "." + o.getKey()));
 				} else {
 					return getNullProperties(o.getValue(), o.getKey());
 				}
@@ -165,45 +175,40 @@ public abstract class ConcurrentTest<T> {
 	}
 
 	/**
-	 * Tells if the given object has no null property
-	 * 
 	 * @param bean The bean to verify
+	 * @return if the given object has no null property
 	 */
 	protected boolean hasNoNullProperty(Object bean) {
 		return getNullProperties(bean).isEmpty();
 	}
 
 	/**
-	 * Tells if the bean has properties
-	 * 
 	 * @param bean The bean we want to inspect
+	 * @return if the bean has properties
 	 */
 	protected boolean hasProperties(Object bean) {
 		return getProperties(bean).size() != 0;
 	}
 
 	/**
-	 * Tells if the object is from the java lang package
-	 * 
 	 * @param bean The bean to inspect
+	 * @return if the object is from the java lang package
 	 */
 	protected boolean isJavaBean(Object bean) {
 		return bean.getClass().getName().startsWith("java");
 	}
 
 	/**
-	 * Tells if the object is a Map
-	 * 
 	 * @param bean The bean to inspect
+	 * @return if the object is a Map
 	 */
 	protected boolean isMap(Object bean) {
 		return bean instanceof Map;
 	}
 
 	/**
-	 * Tells if the object is a Collection (Map excluded)
-	 * 
 	 * @param bean The bean to inspect
+	 * @return if the object is a Collection (Map excluded)
 	 */
 	protected boolean isCollection(Object bean) {
 		return bean instanceof Collection;
@@ -212,7 +217,7 @@ public abstract class ConcurrentTest<T> {
 	/**
 	 * Tests that the object has no null properties
 	 * 
-	 * @param bean
+	 * @param bean The bean
 	 */
 	public void test(Object bean) {
 		System.out.println(String.format("Testing %s object:", bean.getClass().getSimpleName()));
@@ -232,9 +237,88 @@ public abstract class ConcurrentTest<T> {
 	/**
 	 * Tests that the object has no null properties
 	 * 
-	 * @throws ApiException
+	 * @param req The request
+	 * @throws ApiException Thrown if error
 	 */
-	public void test(Request<?> executor) throws ApiException {
-		test(executor.execute());
+	public void test(Request<?> req) throws ApiException {
+		test(req.execute());
 	}
+
+	/**
+	 * @return the key
+	 */
+	public String getKey() {
+		return key;
+	}
+
+	/**
+	 * @return the secret
+	 */
+	public String getSecret() {
+		return secret;
+	}
+
+	/**
+	 * @return the testnetKey
+	 */
+	public String getTestnetKey() {
+		return testnetKey;
+	}
+
+	/**
+	 * @return the testnetSecret
+	 */
+	public String getTestnetSecret() {
+		return testnetSecret;
+	}
+
+	/**
+	 * @return the symbol
+	 */
+	public String getSymbol() {
+		return symbol;
+	}
+
+	/**
+	 * @return the asset
+	 */
+	public String getAsset() {
+		return asset;
+	}
+
+	/**
+	 * @return the limit
+	 */
+	public int getLimit() {
+		return limit;
+	}
+
+	/**
+	 * @return the assets
+	 */
+	public List<String> getAssets() {
+		return assets;
+	}
+
+	/**
+	 * @return the symbols
+	 */
+	public List<String> getSymbols() {
+		return symbols;
+	}
+
+	/**
+	 * @return the client
+	 */
+	public T getClient() {
+		return client;
+	}
+
+	/**
+	 * @return the testnetClient
+	 */
+	public T getTestnetClient() {
+		return testnetClient;
+	}
+
 }
