@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.beans.IntrospectionException;
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -22,138 +21,137 @@ import com.binance4j.core.pojo.NestedObject;
 import com.binance4j.core.pojo.SubObject;
 import com.binance4j.core.pojo.SubSubObject;
 
-/** TODO REDO TESTS!!!! */
-public class BaseTestServiceTest extends ConcurrentTest<Void> {
-    protected BaseTestServiceTest() {
-        super();
-    }
+public class BaseTestServiceTest extends CustomTest<Void> {
+	protected BaseTestServiceTest() {
+		super();
+	}
 
-    AggTrade trade;
-    AggTrade trade2;
+	AggTrade trade;
+	AggTrade trade2;
 
-    @BeforeEach
-    void beforeEach() {
-        trade = new AggTrade(123L, 1L, 2L, 100L, new BigDecimal(1), new BigDecimal(1), false, false);
-        trade2 = new AggTrade(123L, 0L, 2L, 100L, null, new BigDecimal(1), false, false);
-    }
+	@BeforeEach
+	void beforeEach() {
+		trade = new AggTrade(123L, 1L, 2L, 100L, new BigDecimal(1), new BigDecimal(1), false, false);
+		trade2 = new AggTrade(123L, 0L, 2L, 100L, null, new BigDecimal(1), false, false);
+	}
 
-    @Test
-    void testGetProperties() {
-        Map<String, Object> map = getProperties(trade);
+	@Test
+	void testGetProperties() {
+		Map<String, Object> map = getProperties(trade);
 
-        List<String> list = new ArrayList<String>();
-        list.add("ok");
-        list.add("lol");
-        list.add("hihi");
+		List<String> list = new ArrayList<String>();
+		list.add("ok");
+		list.add("lol");
+		list.add("hihi");
 
-        assertEquals(map.get("firstTradeId"), trade.firstTradeId());
-        assertEquals(map.get("lastTradeId"), trade.lastTradeId());
-        assertEquals(map.get("price"), trade.price());
-        assertEquals(map.get("quantity"), trade.quantity());
-        assertEquals(map.get("time"), trade.time());
-        assertEquals(map.get("tradeId"), trade.tradeId());
-    }
+		assertEquals(map.get("firstTradeId"), trade.firstTradeId());
+		assertEquals(map.get("lastTradeId"), trade.lastTradeId());
+		assertEquals(map.get("price"), trade.price());
+		assertEquals(map.get("quantity"), trade.quantity());
+		assertEquals(map.get("time"), trade.time());
+		assertEquals(map.get("tradeId"), trade.tradeId());
+	}
 
-    @Test
-    void testGetNullProperties() {
+	@Test
+	void testGetNullProperties() {
 
-        Set<String> list = getNullProperties(trade2);
-        assertEquals(2, list.size());
-        assertTrue(list.containsAll(Arrays.asList("firstTradeId", "price")));
-    }
+		Set<String> list = getNullProperties(trade2);
+		assertEquals(2, list.size());
+		assertTrue(list.containsAll(List.of("firstTradeId", "price")));
+	}
 
-    @Test
-    void testGetNullPropertiesOfList() {
-        List<AggTrade> listOfTrades = new ArrayList<>();
-        listOfTrades.add(trade);
-        listOfTrades.add(trade2);
-        Set<String> list = getNullProperties(listOfTrades);
+	@Test
+	void testGetNullPropertiesOfList() {
+		List<AggTrade> listOfTrades = new ArrayList<>();
+		listOfTrades.add(trade);
+		listOfTrades.add(trade2);
+		Set<String> list = getNullProperties(listOfTrades);
 
-        assertEquals(4, list.size());
-        assertTrue(list.contains("ArrayList[0].firstTradeId"));
-        assertTrue(list.contains("ArrayList[0].price"));
-        assertTrue(list.contains("ArrayList[1].quantity"));
-        assertTrue(list.contains("ArrayList[1].time"));
-    }
+		assertEquals(4, list.size());
+		assertTrue(list.contains("ArrayList[0].firstTradeId"));
+		assertTrue(list.contains("ArrayList[0].price"));
+		assertTrue(list.contains("ArrayList[1].quantity"));
+		assertTrue(list.contains("ArrayList[1].time"));
+	}
 
-    @Test
-    void testGetNestedProperties() {
+	@Test
+	void testGetNestedProperties() {
 
-        SubSubObject subSubObject1 = new SubSubObject();
-        subSubObject1.getTrades().add(trade);
-        subSubObject1.getTrades().add(trade);
+		SubSubObject subSubObject1 = new SubSubObject();
+		subSubObject1.getTrades().add(trade);
+		subSubObject1.getTrades().add(trade);
 
-        SubSubObject subSubObject2 = new SubSubObject();
-        subSubObject2.getTrades().add(trade);
-        subSubObject2.getTrades().add(trade);
+		SubSubObject subSubObject2 = new SubSubObject();
+		subSubObject2.getTrades().add(trade);
+		subSubObject2.getTrades().add(trade);
 
-        SubObject subsub1 = new SubObject();
-        subsub1.getSubSubObjects().add(subSubObject1);
-        subsub1.getSubSubObjects().add(subSubObject2);
+		SubObject subsub1 = new SubObject();
+		subsub1.getSubSubObjects().add(subSubObject1);
+		subsub1.getSubSubObjects().add(subSubObject2);
 
-        SubObject subsub2 = new SubObject();
-        subsub2.getSubSubObjects().add(subSubObject1);
-        subsub2.getSubSubObjects().add(subSubObject2);
+		SubObject subsub2 = new SubObject();
+		subsub2.getSubSubObjects().add(subSubObject1);
+		subsub2.getSubSubObjects().add(subSubObject2);
 
-        NestedObject nestedObject = new NestedObject();
-        nestedObject.getSubs().add(subsub1);
-        nestedObject.getSubs().add(subsub2);
+		NestedObject nestedObject = new NestedObject();
+		nestedObject.getSubs().add(subsub1);
+		nestedObject.getSubs().add(subsub2);
 
-        Set<String> list = getNullProperties(nestedObject);
+		Set<String> list = getNullProperties(nestedObject);
 
-        assertEquals(16, list.size());
-        assertTrue(list.contains("subs[0].subSubObjects[1].trades[1].firstTradeId"));
-        assertTrue(list.contains("subs[0].subSubObjects[1].trades[1].price"));
-        assertTrue(list.contains("subs[1].subSubObjects[0].trades[0].firstTradeId"));
-        assertTrue(list.contains("subs[1].subSubObjects[0].trades[0].price"));
-        assertTrue(list.contains("subs[1].subSubObjects[0].trades[1].firstTradeId"));
-        assertTrue(list.contains("subs[1].subSubObjects[0].trades[1].price"));
-        assertTrue(list.contains("subs[1].subSubObjects[1].trades[0].firstTradeId"));
-        assertTrue(list.contains("subs[1].subSubObjects[1].trades[0].price"));
-        assertTrue(list.contains("subs[1].subSubObjects[1].trades[1].firstTradeId"));
-        assertTrue(list.contains("subs[1].subSubObjects[1].trades[1].price"));
-    }
+		assertEquals(16, list.size());
+		assertTrue(list.contains("subs[0].subSubObjects[1].trades[1].firstTradeId"));
+		assertTrue(list.contains("subs[0].subSubObjects[1].trades[1].price"));
+		assertTrue(list.contains("subs[1].subSubObjects[0].trades[0].firstTradeId"));
+		assertTrue(list.contains("subs[1].subSubObjects[0].trades[0].price"));
+		assertTrue(list.contains("subs[1].subSubObjects[0].trades[1].firstTradeId"));
+		assertTrue(list.contains("subs[1].subSubObjects[0].trades[1].price"));
+		assertTrue(list.contains("subs[1].subSubObjects[1].trades[0].firstTradeId"));
+		assertTrue(list.contains("subs[1].subSubObjects[1].trades[0].price"));
+		assertTrue(list.contains("subs[1].subSubObjects[1].trades[1].firstTradeId"));
+		assertTrue(list.contains("subs[1].subSubObjects[1].trades[1].price"));
+	}
 
-    @Test
-    void testHasNoNullProperty() throws IntrospectionException {
-        assertTrue(hasNoNullProperty(trade));
-    }
+	@Test
+	void testHasNoNullProperty() throws IntrospectionException {
+		assertTrue(hasNoNullProperty(trade));
+	}
 
-    @Test
-    void testHasNullProperty() throws IntrospectionException {
-        System.out.println(trade2);
-        assertFalse(hasNoNullProperty(trade2));
-    }
+	@Test
+	void testHasNullProperty() throws IntrospectionException {
+		System.out.println(trade2);
+		assertFalse(hasNoNullProperty(trade2));
+	}
 
-    @Test
-    void testHasBeanProperties() {
-        System.out.println(trade);
-        assertTrue(hasProperties(trade));
-    }
+	@Test
+	void testHasBeanProperties() {
+		System.out.println(trade);
+		assertTrue(hasProperties(trade));
+	}
 
-    @Test
-    void testIsJava() {
-        assertTrue(isJavaBean("test"));
-        assertTrue(isJavaBean(new ArrayList<>()));
-        assertTrue(isJavaBean(new HashMap<>()));
-        assertFalse(isJavaBean(trade));
-    }
+	@Test
+	void testIsJava() {
+		assertTrue(isJavaBean("test"));
+		assertTrue(isJavaBean(new ArrayList<>()));
+		assertTrue(isJavaBean(new HashMap<>()));
+		assertFalse(isJavaBean(trade));
+	}
 
-    @Test
-    void testIsMap() {
-        assertTrue(isMap(new HashMap<>()));
-        assertFalse(isMap(new HashSet<>()));
-        assertFalse(isMap(new ArrayList<>()));
-        assertFalse(isMap("test"));
-        assertFalse(isMap(trade));
-    }
+	@Test
+	void testIsMap() {
+		assertTrue(isMap(new HashMap<>()));
+		assertFalse(isMap(new HashSet<>()));
+		assertFalse(isMap(new ArrayList<>()));
+		assertFalse(isMap("test"));
+		assertFalse(isMap(trade));
+	}
 
-    @Test
-    void testIsCollection() {
-        assertTrue(isCollection(new HashSet<>()));
-        assertTrue(isCollection(new ArrayList<>()));
-        assertFalse(isCollection(new HashMap<>()));
-        assertFalse(isCollection("test"));
-        assertFalse(isCollection(trade));
-    }
+	@Test
+	void testIsCollection() {
+		assertTrue(isCollection(new HashSet<>()));
+		assertTrue(isCollection(new ArrayList<>()));
+		assertFalse(isCollection(new HashMap<>()));
+		assertFalse(isCollection("test"));
+		assertFalse(isCollection(trade));
+	}
 }
