@@ -2,7 +2,7 @@ package com.binance4j.market;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
@@ -16,9 +16,7 @@ class GetExchangeInfoTest extends MarketTest {
 	public void test(Object bean) {
 		Set<String> nulls = getNullProperties(bean, true);
 		System.out.println(nulls);
-		assertTrue(
-				nulls.containsAll(
-						Arrays.asList("notional", "percentPriceBySide", "maxPosition", "maxNumIcebergOrders")));
+		assertTrue(nulls.containsAll(List.of("notional", "percentPriceBySide", "maxPosition", "maxNumIcebergOrders")));
 	}
 
 	@Test
